# esp_price_ticker

./: .gitignore  CMakeLists.txt  LICENSE  README
main/: CMakeLists.txt  Kconfig.projbuild  app_comm.h  app_ctrl.c  app_disp.c  app_disp.h  app_font.c  app_http.c  app_main.c  app_wifi.c  server_root_cert.pem
